<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/headpiece_5" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:context="${relativePackage}.${activityClass}" >
	
	    <TextView
	        android:id="@+id/textSettingsView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/buttonSettings2"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="23dp"
	        android:text="@string/hello_world_1"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/textSettingsView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonSettings2"
	        android:layout_centerHorizontal="true"
	        android:text="@string/small_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <Button
	        android:id="@+id/buttonSettings1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textSettingsView3"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="24dp"
	        android:onClick="clickSettingsAdd"
	        android:text="@string/text_button" />
	
	    <TextView
	        android:id="@+id/textSettingsView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonSettings1"
	        android:layout_centerHorizontal="true"
	        android:text="@string/small_text_2"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <Button
	        android:id="@+id/buttonSettings2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="40dp"
	        android:onClick="clickWatch"
	        android:text="@string/text_button_2" />
        
    </RelativeLayout>

</RelativeLayout>