<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/headpiece_6" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:context="${relativePackage}.${activityClass}" >
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignRight="@+id/textView3"
	        android:layout_marginTop="16dp"
	        android:text="@string/add_text_0"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <ProgressBar
	        android:id="@+id/progressBar1"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView1"
	        android:layout_centerHorizontal="true"
	        android:progressDrawable="@drawable/redprogressbar"
	        android:minHeight="5dip"
	        android:maxHeight="5dip" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/progressBar1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/add_text_1"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView2"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText1"
	        android:layout_centerHorizontal="true"
	        android:text="@string/add_text_2"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView3"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText2"
	        android:layout_centerHorizontal="true"
	        android:text="@string/add_text_3"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView4"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText3"
	        android:layout_centerHorizontal="true"
	        android:text="@string/add_text_4"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <EditText
	        android:id="@+id/editText4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView5"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText4"
	        android:layout_centerHorizontal="true"
	        android:text="@string/add_text_5"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <EditText
	        android:id="@+id/editText5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView6"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText5"
	        android:layout_centerHorizontal="true"
	        android:text="@string/add_text_6"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <EditText
	        android:id="@+id/editText6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView7"
	        android:layout_centerHorizontal="true"
	        android:ems="10" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText6"
	        android:layout_centerHorizontal="true"
	        android:onClick="clickAdd"
	        android:text="@string/add_button" />
	
	    <ProgressBar
	        android:id="@+id/progressBar2"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/button1"
	        android:layout_centerHorizontal="true"
	        android:progressDrawable="@drawable/redprogressbar"
	        android:minHeight="5dip"
	        android:maxHeight="5dip" />
	    
	</RelativeLayout>

</RelativeLayout>