<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/headpiece_8" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:context="${relativePackage}.${activityClass}" >
    
	    <Button
	        android:id="@+id/buttonWatchLeftResults"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="1dp"
	        android:layout_above="@+id/progressBarWatch1Results"
	        android:onClick="pressButtonWatchLeftResults"
	        android:text="@string/text_button_watch_left" />
	
	    <TextView
	        android:id="@+id/textTitleWatch1Results"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="3dp"
	        android:text="@string/text_title_watch_1_results"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textTitleWatch2Results"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textTitleWatch1Results"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="2dp"
	        android:text="@string/text_title_watch_2_results"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <ProgressBar
	        android:id="@+id/progressBarWatch1Results"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textTitleWatch2Results"
	        android:progressDrawable="@drawable/greenprogressbar"
	        android:minHeight="5dip"
	        android:maxHeight="5dip" />
	
	    <TextView
	        android:id="@+id/textWatchBaseResults"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/progressBarWatch1Results"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="W A T C H I N G   O F   B A S E"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <ListView
	        android:id="@+id/listView1Results"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/buttonDeleteResults"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textWatchBaseResults" >
	    </ListView>

	    <Button
	        android:id="@+id/buttonDeleteResults"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_above="@+id/progressBarWatch2Results"
	        android:onClick="pressButtonDeleteResults"
	        android:text="@string/text_button_delete_results" />
	    
	    <ProgressBar
	        android:id="@+id/progressBarWatch2Results"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:progressDrawable="@drawable/greenprogressbar"
	        android:minHeight="5dip"
	        android:maxHeight="5dip" />

	    <Button
	        android:id="@+id/buttonWatchRightResults"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_above="@+id/progressBarWatch1Results"
	        android:onClick="pressButtonWatchRightResults"
	        android:text="@string/text_button_watch_right" />
	    
	</RelativeLayout>
    

</RelativeLayout>